--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,14 @@
 target
 *.log
 shooter.iml
+`
 
 # Assets
 src/main/resources/**/*.png
 src/main/resources/**/*.ogg
 src/main/resources/**/*.fnt
+
+# XML Files
+nbactions.xml
+nb-configuration.xml
+
