--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>aunmag.shooter</groupId>
     <artifactId>shooter</artifactId>
-    <version>0.3.113</version>
+    <version>0.4.0-SNAPSHOT</version>
 
     <properties>
         <main-class>aunmag.shooter.game.Main</main-class>
